unpackaged/main/default/objects/sked_Operation_Drive_Limit__c/sked_Operation_Drive_Limit__c.object-meta.xml
<CustomObject>
    <label>Operation Drive Limit</label>
    <nameField>
        <displayFormat>ODL-{000000}</displayFormat>
        <label>Operation Drive Limit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operation Drive Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>