unpackaged/main/default/objects/sked_Operation_Drive_Limit__c/fields/sked_Days_of_Week__c.field-meta.xml
<CustomField>
    <fullName>sked_Days_of_Week__c</fullName>
    <label>Days of Week</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Days_of_Week</valueSetName>
    </valueSet>
</CustomField>