unpackaged/main/default/objects/sked_Operation_Drive_Limit__c/fields/sked_Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Effective_Start_Date__c</fullName>
    <label>Effective Start Date</label>
    <type>Date</type>
</CustomField>