unpackaged/main/default/objects/sked_Operation_Drive_Limit__c/fields/sked_Quantity__c.field-meta.xml
<CustomField>
    <fullName>sked_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>