unpackaged/main/default/objects/sked_Operation_Drive_Limit__c/fields/sked_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drive Limit</fullName>
            </value>
            <value>
                <fullName>2RBC Limit</fullName>
            </value>
            <value>
                <fullName>SCU Limit</fullName>
            </value>
            <value>
                <fullName>DOT Limit</fullName>
            </value>
            <value>
                <fullName>CDL Limit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>