unpackaged/main/default/objects/sked_Operation_Drive_Limit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>sked_Collection_Operation__c</columns>
    <columns>NAME</columns>
    <columns>sked_Days_of_Week__c</columns>
    <columns>sked_Quantity__c</columns>
    <columns>sked_Effective_Start_Date__c</columns>
    <columns>sked_Effective_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>